--- a/Geo3.tex
+++ b/Geo3.tex
@@ -61,76 +61,92 @@ where a and b are two sides and c is the hypotenuse.
 \subsection{Proof}
 
 
+\begin{minipage}{0.2\linewidth}
+
+
+
 \tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
 
 \begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
-%uncomment if require: \path (0,389); %set diagram left start at 0, and has height of 389
+%uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
 
-%Straight Lines [id:da7810882093328524] 
-\draw    (132.61,28) -- (132.01,114.55) ;
-%Straight Lines [id:da0001872892319363384] 
-\draw    (132.61,28) -- (276.01,115.92) ;
-%Straight Lines [id:da14609712871080904] 
-\draw    (132.01,114.55) -- (276.01,115.92) ;
-%Straight Lines [id:da17225998918083474] 
-\draw    (44.47,170.87) -- (131.02,171.51) ;
-%Straight Lines [id:da9772684531569544] 
-\draw    (44.47,170.87) -- (132.47,27.51) ;
-%Straight Lines [id:da0643086164519977] 
-\draw    (131.02,171.51) -- (132.47,27.51) ;
-%Straight Lines [id:da6587126862106818] 
-\draw    (188.03,257.21) -- (187.58,170.66) ;
-%Straight Lines [id:da6536516511809205] 
-\draw    (188.03,257.21) -- (43.57,171.02) ;
-%Straight Lines [id:da004505283584124831] 
-\draw    (187.58,170.66) -- (43.57,171.02) ;
-%Straight Lines [id:da0382305085022161] 
-\draw    (275.77,115.49) -- (189.22,114.99) ;
-%Straight Lines [id:da11791847320342042] 
-\draw    (275.77,115.49) -- (188,258.99) ;
-%Straight Lines [id:da5759579560679966] 
-\draw    (189.22,114.99) -- (188,258.99) ;
+%Shape: Square [id:dp7205089767241994] 
+\draw   (203.92,94.48) -- (375.3,32.75) -- (437.03,204.12) -- (265.65,265.85) -- cycle ;
+%Straight Lines [id:da8288112099002594] 
+\draw    (203.92,94.48) -- (255.37,94.19) -- (375.4,94.2) ;
+%Straight Lines [id:da929088743160273] 
+\draw    (265,204.2) -- (295.4,204.11) -- (437.03,204.12) ;
+%Straight Lines [id:da01808211820415795] 
+\draw    (375.3,32.75) -- (375,203.8) ;
+%Straight Lines [id:da6987174732927854] 
+\draw    (264.6,94.2) -- (265.65,265.85) ;
 
 % Text Node
-\draw (198,52) node [anchor=north west][inner sep=0.75pt]   [align=left] {c};
+\draw (265.2,76.2) node [anchor=north west][inner sep=0.75pt]    {$E$};
 % Text Node
-\draw (188,117) node [anchor=north west][inner sep=0.75pt]   [align=left] {a};
+\draw (250.8,196.6) node [anchor=north west][inner sep=0.75pt]    {$F$};
 % Text Node
-\draw (120,67) node [anchor=north west][inner sep=0.75pt]   [align=left] {b};
+\draw (373.6,9.4) node [anchor=north west][inner sep=0.75pt]    {$A$};
 % Text Node
-\draw (68.51,105.49) node [anchor=north west][inner sep=0.75pt]  [rotate=-270.03] [align=left] {c};
+\draw (213.6,173.4) node [anchor=north west][inner sep=0.75pt]    {$c$};
 % Text Node
-\draw (133.5,115.53) node [anchor=north west][inner sep=0.75pt]  [rotate=-270.03] [align=left] {a};
+\draw (234.4,96.6) node [anchor=north west][inner sep=0.75pt]    {$b$};
 % Text Node
-\draw (83.47,183.5) node [anchor=north west][inner sep=0.75pt]  [rotate=-270.03] [align=left] {b};
+\draw (439.03,207.52) node [anchor=north west][inner sep=0.75pt]    {$D$};
 % Text Node
-\draw (122.35,234) node [anchor=north west][inner sep=0.75pt]  [rotate=-179.31] [align=left] {c};
+\draw (376,85.8) node [anchor=north west][inner sep=0.75pt]    {$H$};
 % Text Node
-\draw (131.57,168.88) node [anchor=north west][inner sep=0.75pt]  [rotate=-179.31] [align=left] {a};
+\draw (368.21,207.52) node [anchor=north west][inner sep=0.75pt]    {$G$};
 % Text Node
-\draw (200.16,218.06) node [anchor=north west][inner sep=0.75pt]  [rotate=-179.31] [align=left] {b};
+\draw (267.65,269.25) node [anchor=north west][inner sep=0.75pt]    {$C$};
 % Text Node
-\draw (251.84,180.91) node [anchor=north west][inner sep=0.75pt]  [rotate=-89.94] [align=left] {c};
+\draw (189.83,76.32) node [anchor=north west][inner sep=0.75pt]    {$B$};
 % Text Node
-\draw (186.83,170.98) node [anchor=north west][inner sep=0.75pt]  [rotate=-89.94] [align=left] {a};
+\draw (277.2,45) node [anchor=north west][inner sep=0.75pt]    {$c$};
 % Text Node
-\draw (236.76,102.93) node [anchor=north west][inner sep=0.75pt]  [rotate=-89.94] [align=left] {b};
+\draw (354,240.2) node [anchor=north west][inner sep=0.75pt]    {$c$};
+% Text Node
+\draw (416,112.6) node [anchor=north west][inner sep=0.75pt]    {$c$};
+% Text Node
+\draw (266.8,225.4) node [anchor=north west][inner sep=0.75pt]    {$b$};
+% Text Node
+\draw (397.2,186.6) node [anchor=north west][inner sep=0.75pt]    {$b$};
+% Text Node
+\draw (360.4,57.4) node [anchor=north west][inner sep=0.75pt]    {$b$};
+% Text Node
+\draw (280.4,95.8) node [anchor=north west][inner sep=0.75pt]    {$a$};
+% Text Node
+\draw (266.8,163) node [anchor=north west][inner sep=0.75pt]    {$a$};
+% Text Node
+\draw (347.2,185.4) node [anchor=north west][inner sep=0.75pt]    {$a$};
+% Text Node
+\draw (362,109.4) node [anchor=north west][inner sep=0.75pt]    {$a$};
 
 
 \end{tikzpicture}
 
 
+\end{minipage}
+\hfill
+\begin{minipage}{0.87\linewidth}
+$[ABCD]=c^2$\\
+$[ABCD]=[EFGH]+4[AEB]$\\
+$[ABCD]=(a-b)^2+4\frac{ab}{2}$\\
+$[ABCD]=a^2-2ab+b^2+2ab$\\
+$[ABCD]=a^2+b^2$\\
+Therefore, $a^2+b^2=c^2$
+\end{minipage}
 \pagebreak
 
 \section{Trigonometry}
 
 \subsection{Definitions}
 
-Sine or $\sin(\theta)$ :
+Sine or $\sin(\theta)$ : A ratio between the opposite side length and the hypotenuse of a triangle.
 \\ \\
-Cosine or $\cos(\theta)$ :
+Cosine or $\cos(\theta)$ : A ratio between the adjacent side length and the hypotenuse of a triangle.
 \\ \\
-Tangent or $\tan(\theta)$ :
+Tangent or $\tan(\theta)$ : A ratio between the opposite side length and the adjacent side of a triangle.
 
 \subsection{Pythagorean Theorem}
 $$\sin^2 (\theta)+\cos^2 (\theta)=1$$
@@ -140,29 +156,111 @@ $$\sin^2 (\theta)+\cos^2 (\theta)=1$$
 $$S=\frac{ab\sin C}{2}$$
 
 \subsubsection{Proof}
-\vspace{40px}
-
+Since $$\sin C=\frac{h}{b}\longrightarrow h=b\sin C$$\\
+Therefore, $$S=\frac{h\times a}{2}$$
+$$=\frac{\sin C\times b\times a}{2}$$
+$$=\frac{ab\sin C}{2}$$
+\pagebreak
 
 \subsection{Law of Sines}
 
 $$\frac{a}{\sin A}=\frac{b}{\sin B}=\frac{c}{\sin C}=2R=d$$
 
 \subsubsection{Proof}
-\vspace{100px}
+$$S=\frac{ab\sin C}{2}=\frac{bc\sin A}{2}$$
+$$a\sin C=c\sin A$$
+$$\frac{c}{\sin C}=\frac{a}{\sin A}$$\\
+
+$$abc=4RS$$
+$$abd=\frac{4ab\sin C}{2}R$$
+$$c=2\sin CR$$
+$$\frac{c}{\sin C}=2R$$
+Therefore, 
+$$\frac{a}{\sin A}=\frac{b}{\sin B}=\frac{c}{\sin C}=2R=d$$
 
 \subsection{Law of Cosines}
 $$c^2=a^2+b^2-2 a b \cos C $$
 
 \subsubsection{Proof}
+\begin{minipage}{0.2\linewidth}
+    
+
+\tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
+
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-.71,xscale=.71]
+%uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
+
+%Shape: Triangle [id:dp2028764250879178] 
+\draw   (250.17,32.33) -- (428.67,199.67) -- (71.67,199.67) -- cycle ;
+%Straight Lines [id:da05842378731178721] 
+\draw    (250.17,32.33) -- (250,199.33) ;
+
+% Text Node
+\draw (243.33,7.4) node [anchor=north west][inner sep=0.75pt]    {$A$};
+% Text Node
+\draw (48,203.73) node [anchor=north west][inner sep=0.75pt]    {$B$};
+% Text Node
+\draw (242.33,211.07) node [anchor=north west][inner sep=0.75pt]    {$D$};
+% Text Node
+\draw (436,206.4) node [anchor=north west][inner sep=0.75pt]    {$C$};
+% Text Node
+\draw (146.33,98.73) node [anchor=north west][inner sep=0.75pt]    {$c$};
+% Text Node
+\draw (268,198.4) node [anchor=north west][inner sep=0.75pt]    {$a$};
+% Text Node
+\draw (340.67,81.07) node [anchor=north west][inner sep=0.75pt]    {$b$};
+% Text Node
+\draw (151.33,178.07) node [anchor=north west][inner sep=0.75pt]    {$b\cos C$};
+% Text Node
+\draw (252.67,127.4) node [anchor=north west][inner sep=0.75pt]    {$b\sin C$};
+
+
+\end{tikzpicture}
+
+\end{minipage}
+\hfill
+\begin{minipage}{0.43\linewidth}
+    $$\frac{AD}{AC}=\sin C\longrightarrow AD=b\sin C$$
+    $$\frac{BC}{AC}=\cos C\longrightarrow BC=b\cos C$$
+    $$DC=BC-BD=a-b\cos C$$
+\end{minipage}
+\begin{align*} 
+c^2&=(b\sin C)^2+(a-b\cos C)^2\\
+&=b^2\sin ^2C+a^2-2ab\cos C+b^2\cos ^2 C\\
+&=b^2(\sin ^2 C+\cos ^2 C)+a^2-2ab\cos C\\
+&=a^2+b^2-2ab\cos C
+\end{align*}
 
 \pagebreak
 
 \subsection{Problem}
 \subsubsection{Heron's Formula}
-$$S= \sqrt {s (s-a) (s-b) (s-c)}, s=\frac{a+b+c}{2}$$
-
-
-\vspace{200px}
+$$S= \sqrt {s (s-a) (s-b) (s-c)}, s=\frac{a+b+c}{2}$$\\
+1:
+\begin{align*} 
+c^2&=a^2+b^2-2ab\cos C\\
+\cos C&=\frac{a^2+b^2-c^2}{2ab}
+\end{align*}
+2: 
+\begin{align*}    
+\sin ^2 C+\cos ^2 C&=1\\
+\sin C&=\sqrt{1-\cos ^2 C}
+\end{align*}
+Substitute 1 into 2: 
+\begin{align*} 
+\sin C&=\sqrt{1-(\frac{a^2+b^2-c^2}{2ab})^2}\\
+&=\frac{\sqrt{(2ab+a^2+b^2-c^2)\times (2ab-a^2-b^2+c^2}}{2ab}\\
+&=\frac{\sqrt{(a+b-c)\times (a+b+c)\times (c-a+b)\times (c+a-b)}}{2ab}
+\end{align*}
+Substitute into $S=\frac{ab\sin C}{2}$:
+\begin{align*}
+    S&=\frac{ab\sqrt{(a+b-c)\times (a+b+c)\times (c-a+b)\times (c+a-b)}}{2ab}\\
+    &=\sqrt{\frac{(a+b-c)}{2}\times \frac{(a+b+c)}{2}\times \frac{(c-a+b)}{2}\times \frac{(c+a-b)}{2}}\\
+    &=\sqrt{\frac{(a+b+c-2c)}{2}\times \frac{(a+b+c)}{2}\times \frac{(c+a+b-2a)}{2}\times \frac{(c+a+b-2b)}{2}}\\
+    &=\sqrt{(\frac{a+b+c}{2}-c)\times (\frac{a+b+c}{2})\times (\frac{a+b+c}{2}-a)\times (\frac{a+b+c}{2}-b)}\\
+    &=\sqrt{s\times (s-a)\times(s-b)\times(s-c)}
+\end{align*}
+\pagebreak
 
 
 \subsubsection{Problem}
