--- a/Alge3.tex
+++ b/Alge3.tex
@@ -131,14 +131,14 @@ But because this is for $2S_n$, $$S_n=\frac{(n+1)n}{2}$$
 
 \subsubsection{Property of sum operator}
 
-IT IS A LINEAR OPPERATOR:
+IT IS A LINEAR OPERATOR:
 
 \begin{itemize}
     \item $\sum (a_i+b_i) = \sum a_i + \sum b_i$
     \item $\sum ca_i = c \sum a_i$ for constant $c$
 \end{itemize}
 
-\subsubsection{Proof of genral term}
+\subsubsection{Proof of general term}
 \newpage
 
 \subsection{Geometric Series}
@@ -159,7 +159,7 @@ Now, consider the identity $$x^n-1=(x-1)(x^{n-1}+\dots+x^2+x+1)$$
 Therefore,
 $$S_n=1+r+r^2+\dots+r^{n-1}=\frac{r^n-1}{r-1}$$
 
-\subsubsection{Proof of genral term}
+\subsubsection{Proof of general term}
 \vspace{30px}
 \subsubsection{Push to infinity}
 
@@ -222,7 +222,7 @@ The infinite product\[\sqrt[3]{10} \cdot \sqrt[3]{\sqrt[3]{10}} \cdot \sqrt[3]{\
 
 \subsection{2020 AMC 10A 21}
 
-There exists a unique strictly increasing sequence of nonnegative integers $a_1 < a_2 < … < a_k$ such that\[\frac{2^{289}+1}{2^{17}+1} = 2^{a_1} + 2^{a_2} + … + 2^{a_k}.\]What is $k?$
+There exists a unique strictly increasing sequence of non-negative integers $a_1 < a_2 < … < a_k$ such that\[\frac{2^{289}+1}{2^{17}+1} = 2^{a_1} + 2^{a_2} + … + 2^{a_k}.\]What is $k?$
 
 
 
