--- a/Alge4.tex
+++ b/Alge4.tex
@@ -19,11 +19,11 @@
 
 \maketitle
 
-\section{Euqation}
+\section{Equation}
 
 \subsection{Definition}
-Eequation is a statement that the values of two mathematical expressions are equal.
-To solve a equation means to find the value of the unknow(s) so that the values of two mathematical expressions are equal.
+An equation is a statement that the values of two mathematical expressions are equal.
+To solve an equation means to find the value of the unknown (s) so that the values of two mathematical expressions are equal.
 
 \subsection{Tricks in solving equation}
 
@@ -35,7 +35,7 @@ To solve a equation means to find the value of the unknow(s) so that the values 
 \vspace{40px}
 \subsubsection{Rational Roots Theorem}
 \vspace{40px}
-\subsubsection{Long divition}
+\subsubsection{Long division}
 \vspace{40px}
 \pagebreak
 \subsection{Problems}
@@ -51,7 +51,7 @@ $$(x+1)(x+2)(x+3)(x+4)=3$$
 $$x^3 + 5 x^2 + 3 x - 4 = 0$$
 \vspace{40px}
 
-\section{Vieta's Theorem and Symetrical Polynomials}
+\section{Vieta's Theorem and Symmetrical Polynomials}
 \subsection{Vieta's Theorem}
 In algebra, Vieta's formulas are a set of results that relate the coefficients of a polynomial to its roots. 
 
@@ -80,7 +80,7 @@ $$\frac{x^4-x^2}{(x^4-13x^2+36)^2} \ge 0$$
 
 \subsection{Use Inequality to Estimate}
 \subsubsection{Example}
-$a,b,c$ are postive real numbers, prove
+$a,b,c$ are positive real numbers, prove
 $$\frac{a}{b+c}+\frac{b}{c+a}+\frac{c}{a+b} > \frac{1}{3}$$
 \vspace{60px}
 
