--- a/Alge3.tex
+++ b/Alge3.tex
@@ -102,7 +102,7 @@ How to solve:
 
 \section{Series}
 
-\subsection{Defnition}
+\subsection{Definition}
 
 A series is the cumulative sum of a given sequence of terms.
 
@@ -220,7 +220,7 @@ The infinite product\[\sqrt[3]{10} \cdot \sqrt[3]{\sqrt[3]{10}} \cdot \sqrt[3]{\
 
 \pagebreak
 
-\subsection{2020 AMC 10A 21}
+\subsection{2020 AMC 10A Q21}
 
 There exists a unique strictly increasing sequence of non-negative integers $a_1 < a_2 < … < a_k$ such that\[\frac{2^{289}+1}{2^{17}+1} = 2^{a_1} + 2^{a_2} + … + 2^{a_k}.\]What is $k?$
 
