--- a/Alge4.tex
+++ b/Alge4.tex
@@ -31,7 +31,7 @@ To solve an equation means to find the value of the unknown (s) so that the valu
 \vspace{40px}
 \subsubsection{Quadratic Formula}
 \vspace{40px}
-\subsubsection{Subsitution}
+\subsubsection{Substitution}
 \vspace{40px}
 \subsubsection{Rational Roots Theorem}
 \vspace{40px}
@@ -57,7 +57,7 @@ In algebra, Vieta's formulas are a set of results that relate the coefficients o
 
 \pagebreak
 
-\subsection{Symetrical Polynomials}
+\subsection{Symmetrical Polynomials}
 Definition:
 \vspace{30px}
 \subsection{Problems}
