--- a/Alge4.tex
+++ b/Alge4.tex
@@ -81,7 +81,7 @@ $$\frac{x^4-x^2}{(x^4-13x^2+36)^2} \ge 0$$
 \subsection{Use Inequality to Estimate}
 \subsubsection{Example}
 $a,b,c$ are positive real numbers, prove
-$$\frac{a}{b+c}+\frac{b}{c+a}+\frac{c}{a+b} > \frac{1}{3}$$
+$$\frac{a}{b+c}+\frac{b}{c+a}+\frac{c}{a+b} > 1$$
 \vspace{60px}
 
 \subsubsection{Problem: 2010 AIME I Q5}
