--- a/Combo1.tex
+++ b/Combo1.tex
@@ -19,6 +19,55 @@
 
 \maketitle
 
+\section{Introduction to Counting}
+
+\subsection{Rule of Product}
+\subsubsection{Definition}
+\vspace{20px}
+\subsubsection{Example 1}
+How many 4 digit numbers are there with no repeated digits?
+\vspace{20px}
+\subsubsection{Example 2}
+How many ways are there for 5 people to stand in a row?
+\vspace{20px}
+\subsection{Rule of Sum}
+\subsubsection{Definition}
+\vspace{20px}
+\subsubsection{Example 1}
+
+
+
+\subsection{Case Working}
+
+\subsection{Indirect/Complemnetary Counting}
+
+\section{Permutation and Combination}
+
+\subsection{Factorial}
+
+\subsection{Permutation}
+
+\subsection{With Repetition}
+
+\subsection{Combination}
+
+\subsection{Star and Bars}
+
+\section{Pascal Triangle}
+
+\subsection{Pascal Triangle}
+
+\subsection{Binomial Theorem}
+
+\subsection{Pascal Routes}
+
+\section{Probability}
+
+\subsection{Discrete}
+
+\subsection{Continuous}
+
+
 
 
 \end{document}
