--- a/Trig and Log.tex
+++ b/Trig and Log.tex
@@ -12,7 +12,7 @@
 
 \title{Algebra 5 - Trignometry and logarithm }
 \author{TSS Math Club}
-\date{Dec 2022}
+\date{2022-2023}
 
 \begin{document}
 \large
