--- a/Trig and Log.tex
+++ b/Trig and Log.tex
@@ -10,7 +10,7 @@
 \usepackage{tikz}
 
 
-\title{Algebra 5 - Trignometry and logarithm }
+\title{Algebra 5 - Trignometry and Logarithm }
 \author{TSS Math Club}
 \date{2022-2023}
 
