--- a/Trig and Log.tex
+++ b/Trig and Log.tex
@@ -21,6 +21,6 @@
 
 \center
 
-Please Review your Trignometry 2 and Logarithm in MHF4U.
+Please review your Trignometry 2 and Logarithm in MHF4U.
 
 \end{document}
