--- a/Geo1_Blank.tex
+++ b/Geo1_Blank.tex
@@ -219,6 +219,7 @@ Two lines in two-dimensional Euclidean space are said to be parallel if they do 
 
 \subsection{Another problem}
 
+Given $\mathrm{AB} / / \mathrm{CD}, \mathrm{AE}$ bisect $\mathrm{BAC}, \mathrm{CE}$ bisect $\mathrm{ACD}$, prove $\mathrm{AE}$ perpendicular to $\mathrm{CE}$.
 
 
 \tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
